@@ -50,13 +50,28 @@ sub open_file
 {
     my $self     = shift;
 
+    my $layers   = ':encoding(UTF-8)';
     my $filename = defined($self->path)
                    ? $self->path
                    : $self->cache_path;
 
-    open(my $fh, '<:encoding(UTF-8)', $filename) || croak "can't open $filename: $!";
+    if ($filename =~ /\.gz\z/) {
+        require PerlIO::gzip;
+        $layers = ':gzip'.$layers;
+    }
+
+    open(my $fh, '<'.$layers, $filename)
+        || croak "can't open $filename: $!";
 
     return $fh;
+}
+
+sub close_file
+{
+    my $self = shift;
+    my $fh   = shift;
+
+    close($fh);
 }
 
 1;
@@ -76,7 +91,10 @@ MooX::Role::CachedURL - a role providing a locally cached copy of a remote file
     my $self = shift;
     my $fh   = $self->open_file;
  
-    # $self->cache_path has the path to the local copy of the file
+    while (<$fh>) {
+        ...
+    }
+    $self->close_file($fh);
  }
 
 Then in the user of MyClass:
@@ -88,12 +106,15 @@ Then in the user of MyClass:
 
 =head1 DESCRIPTION
 
-This role represents a remote file that you want to cache locally, and then process.
+This role represents a remote file that you want to cache locally,
+and then process.
 This is common functionality that I'm pulling out of my L<PAUSE::Users>,
 L<PAUSE::Permissions> and L<PAUSE::Packages> modules.
 
-PAUSE::Users provides a simple interface to the C<00whois.xml> file that is generated by PAUSE.
-It caches the file locally, then provides a mechanism for iterating over all users in the file.
+PAUSE::Users provides a simple interface to the C<00whois.xml> file
+that is generated by PAUSE.
+It caches the file locally,
+then provides a mechanism for iterating over all users in the file.
 
 =head1 ATTRIBUTES
 
@@ -124,6 +145,12 @@ You can specify max_age using any of the notations supported by L<Time::Duration
 For example:
 
  max_age => '2 hours',
+
+=head1 Support for gzip'd files
+
+If the C<cache_path> or C<path> attribute ends in C<.gz>,
+then the file is assumed to be gzip'd, and will be transparently handled
+using L<PerlIO::gzip>.
 
 =head1 TODO
 
